--- a/index.html
+++ b/index.html
@@ -93,31 +93,40 @@ iframe, video, img {
     <a href="https://www.effectivegatecpm.com/e489rn8n?key=9a3e97acd0392472deecc84f30dad02a" target="_blank" class="blink" style="font-size:30px; color:white; font-family: 'Press Start 2P', monospace;">丸山エロス.com</a>
 </section>
 
-<!--広告 -->
-<section style="display: flex; justify-content: center; width: 100%;">
-    <script type="text/javascript">
-        atOptions = {
-            'key' : '7168a8fe5a667d3ea1af3f47b8033d49',
-            'format' : 'iframe',
-            'height' : 90,
-            'width' : 728,
-            'params' : {}
-        };
-    </script>
-    <script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
+<!-- 広告1 -->
+<div class="ad-box">
+<section style="width:100%; text-align:center;">
+<div style="display:inline-block;">
+<script type="text/javascript">
+atOptions = {
+'key' : '7168a8fe5a667d3ea1af3f47b8033d49',
+'format' : 'iframe',
+'height' : 90,
+'width' : 728,
+'params' : {}
+};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
+</div>
 </section>
-<!--広告2 -->
-<section style="display: flex; justify-content: center; width: 100%;">
-    <script type="text/javascript">
-        atOptions = {
-            'key' : '7168a8fe5a667d3ea1af3f47b8033d49',
-            'format' : 'iframe',
-            'height' : 90,
-            'width' : 728,
-            'params' : {}
-        };
-    </script>
-    <script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
+</div>
+
+
+<!-- 広告2 -->
+<div class="ad-box">
+<section style="width:100%; text-align:center;">
+<div style="display:inline-block;">
+<script type="text/javascript">
+atOptions = {
+'key' : '7168a8fe5a667d3ea1af3f47b8033d49',
+'format' : 'iframe',
+'height' : 90,
+'width' : 728,
+'params' : {}
+};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
+</div>
 </section>
 
 <section>
