--- a/index.html
+++ b/index.html
@@ -95,39 +95,36 @@ iframe, video, img {
 
 <!-- 広告1 -->
 <div class="ad-box">
-<section style="width:100%; text-align:center;">
-<div style="display:inline-block;">
-<script type="text/javascript">
-atOptions = {
-'key' : '7168a8fe5a667d3ea1af3f47b8033d49',
-'format' : 'iframe',
-'height' : 90,
-'width' : 728,
-'params' : {}
-};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
+    <div style="width:728px; margin:0 auto; text-align:center;">
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '7168a8fe5a667d3ea1af3f47b8033d49',
+                'format' : 'iframe',
+                'height' : 90,
+                'width' : 728,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
+    </div>
 </div>
-</section>
-</div>
-
 
 <!-- 広告2 -->
 <div class="ad-box">
-<section style="width:100%; text-align:center;">
-<div style="display:inline-block;">
-<script type="text/javascript">
-atOptions = {
-'key' : '7168a8fe5a667d3ea1af3f47b8033d49',
-'format' : 'iframe',
-'height' : 90,
-'width' : 728,
-'params' : {}
-};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
+    <div style="width:728px; margin:0 auto; text-align:center;">
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '7168a8fe5a667d3ea1af3f47b8033d49',
+                'format' : 'iframe',
+                'height' : 90,
+                'width' : 728,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
+    </div>
 </div>
-</section>
+
 
 <section>
     <h2 style="color:yellow;">かいちゃんのひみつ</h2>
@@ -151,7 +148,7 @@ atOptions = {
     <h2 style="color:lime;">ブロック崩しゲーム</h2>
     <iframe style="height:500px; border:2px solid lime;" src="https://html5.gamedistribution.com/rvvASMiM/77087b953d9047198a48528927dab68a/index.html"></iframe>
 </section>
-
+<!--ネイティブバナー広告1 -->
 <section>
 <script async="async" data-cfasync="false" src="//pl28111633.effectivegatecpm.com/2d3b6b9d1f227b1c9e373b22dc72b1b9/invoke.js"></script>
 <div id="container-2d3b6b9d1f227b1c9e373b22dc72b1b9"></div>
@@ -185,24 +182,30 @@ atOptions = {
 <section><h2 style="color:white;">８日目</h2></section>
 <section><h2 style="color:white;">９日目</h2></section>
 <section><h2 style="color:white;">１０日目</h2></section>
-<!--広告2 -->
-<section style="display: flex; justify-content: center; width: 100%;">
-    <script type="text/javascript">
-        atOptions = {
-            'key' : '7168a8fe5a667d3ea1af3f47b8033d49',
-            'format' : 'iframe',
-            'height' : 90,
-            'width' : 728,
-            'params' : {}
-        };
-    </script>
-    <script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
-</section>
+<!-- 広告3 -->
+<div class="ad-box">
+    <div style="width:728px; margin:0 auto; text-align:center;">
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '7168a8fe5a667d3ea1af3f47b8033d49',
+                'format' : 'iframe',
+                'height' : 90,
+                'width' : 728,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
+    </div>
+</div>
 <section>
  <h2 style="color:red;">👍👍👍👍👍👍👍👍👍👍👍👍👍</h2>
  <video src="ali.mp4" controls></video>
 </section>
-
+<!--ネイティブバナー広告2 -->
+<section>
+<script async="async" data-cfasync="false" src="//pl28111633.effectivegatecpm.com/2d3b6b9d1f227b1c9e373b22dc72b1b9/invoke.js"></script>
+<div id="container-2d3b6b9d1f227b1c9e373b22dc72b1b9"></div>
+</section>
 <section>
  <h2 style="color:red;">🤮🤮🤮🤮🤮🤮🤮🤮🤮🤮🤮🤮🤮</h2>
  <video src="temu.mp4" controls></video>
