--- a/index.html
+++ b/index.html
@@ -124,6 +124,21 @@ iframe, video, img {
         <script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
     </div>
 </div>
+<!-- 広告3 -->
+<div class="ad-box">
+    <div style="width:728px; margin:0 auto; text-align:center;">
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '7168a8fe5a667d3ea1af3f47b8033d49',
+                'format' : 'iframe',
+                'height' : 90,
+                'width' : 728,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
+    </div>
+</div>
 
 
 <section>
@@ -182,7 +197,7 @@ iframe, video, img {
 <section><h2 style="color:white;">８日目</h2></section>
 <section><h2 style="color:white;">９日目</h2></section>
 <section><h2 style="color:white;">１０日目</h2></section>
-<!-- 広告3 -->
+<!-- 広告4 -->
 <div class="ad-box">
     <div style="width:728px; margin:0 auto; text-align:center;">
         <script type="text/javascript">
@@ -201,11 +216,70 @@ iframe, video, img {
  <h2 style="color:red;">👍👍👍👍👍👍👍👍👍👍👍👍👍</h2>
  <video src="ali.mp4" controls></video>
 </section>
-<!--ネイティブバナー広告2 -->
-<section>
-<script async="async" data-cfasync="false" src="//pl28111633.effectivegatecpm.com/2d3b6b9d1f227b1c9e373b22dc72b1b9/invoke.js"></script>
-<div id="container-2d3b6b9d1f227b1c9e373b22dc72b1b9"></div>
-</section>
+<!-- 広告5 -->
+<div class="ad-box">
+    <div style="width:728px; margin:0 auto; text-align:center;">
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '7168a8fe5a667d3ea1af3f47b8033d49',
+                'format' : 'iframe',
+                'height' : 90,
+                'width' : 728,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
+    </div>
+</div>
+    <!-- 広告6 -->
+<div class="ad-box">
+    <div style="width:728px; margin:0 auto; text-align:center;">
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '7168a8fe5a667d3ea1af3f47b8033d49',
+                'format' : 'iframe',
+                'height' : 90,
+                'width' : 728,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
+    </div>
+</div>
+    <!-- 広告7 -->
+<div class="ad-box">
+    <div style="width:728px; margin:0 auto; text-align:center;">
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '7168a8fe5a667d3ea1af3f47b8033d49',
+                'format' : 'iframe',
+                'height' : 90,
+                'width' : 728,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
+    </div>
+</div>
+    <!-- 広告8 -->
+<div class="ad-box">
+    <div style="width:728px; margin:0 auto; text-align:center;">
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '7168a8fe5a667d3ea1af3f47b8033d49',
+                'format' : 'iframe',
+                'height' : 90,
+                'width' : 728,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
+    </div>
+</div>
+
+
+
+
 <section>
  <h2 style="color:red;">🤮🤮🤮🤮🤮🤮🤮🤮🤮🤮🤮🤮🤮</h2>
  <video src="temu.mp4" controls></video>
