--- a/index.html
+++ b/index.html
@@ -139,16 +139,51 @@ iframe, video, img {
         <script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
     </div>
 </div>
-<!-- 広告44 -->
-    <script type="text/javascript">
-	atOptions = {
-		'key' : '4af7ad53a67f1b998c95f01149579846',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-</script>
+<div style="display:flex; justify-content:center; gap:20px; flex-wrap:wrap; margin:20px 0;">
+
+    <!-- ボックス広告1 -->
+    <div>
+        <script type="text/javascript">
+        atOptions = {
+            'key' : '4af7ad53a67f1b998c95f01149579846',
+            'format' : 'iframe',
+            'height' : 250,
+            'width' : 300,
+            'params' : {}
+        };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/4af7ad53a67f1b998c95f01149579846/invoke.js"></script>
+    </div>
+
+    <!-- 広告2 -->
+    <div>
+        <script type="text/javascript">
+        atOptions = {
+            'key' : '4af7ad53a67f1b998c95f01149579846',
+            'format' : 'iframe',
+            'height' : 250,
+            'width' : 300,
+            'params' : {}
+        };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/4af7ad53a67f1b998c95f01149579846/invoke.js"></script>
+    </div>
+
+    <!-- 広告3 -->
+    <div>
+        <script type="text/javascript">
+        atOptions = {
+            'key' : '4af7ad53a67f1b998c95f01149579846',
+            'format' : 'iframe',
+            'height' : 250,
+            'width' : 300,
+            'params' : {}
+        };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/4af7ad53a67f1b998c95f01149579846/invoke.js"></script>
+    </div>
+
+</div>
 <script type="text/javascript" src="//www.highperformanceformat.com/4af7ad53a67f1b998c95f01149579846/invoke.js"></script>
 
 
