--- a/index.html
+++ b/index.html
@@ -332,6 +332,81 @@ iframe, video, img {
 </section>
 
 </div>
+    <!-- 縦長広告 -->
+<div style="display:flex; justify-content:center; gap:10px;">
+
+    <!-- 1個目 -->
+    <div>
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '8dc1172332f4fc1216f0ed08d622c93b',
+                'format' : 'iframe',
+                'height' : 600,
+                'width' : 160,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
+    </div>
+
+    <!-- 2個目 -->
+    <div>
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '8dc1172332f4fc1216f0ed08d622c93b',
+                'format' : 'iframe',
+                'height' : 600,
+                'width' : 160,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
+    </div>
+
+    <!-- 3個目 -->
+    <div>
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '8dc1172332f4fc1216f0ed08d622c93b',
+                'format' : 'iframe',
+                'height' : 600,
+                'width' : 160,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
+    </div>
+
+    <!-- 4個目 -->
+    <div>
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '8dc1172332f4fc1216f0ed08d622c93b',
+                'format' : 'iframe',
+                'height' : 600,
+                'width' : 160,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
+    </div>
+
+    <!-- 5個目 -->
+    <div>
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '8dc1172332f4fc1216f0ed08d622c93b',
+                'format' : 'iframe',
+                'height' : 600,
+                'width' : 160,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
+    </div>
+
+</div>
+
 
 <!-- ★★★ JavaScript（修正版） ★★★ -->
 <script>
