--- a/index.html
+++ b/index.html
@@ -342,17 +342,17 @@ atOptions = {
 
 </div>
 
-<!-- ▼▼▼ 追加：縦長広告4つ 横並び ▼▼▼ -->
-<div style="display:flex; justify-content:center; gap:20px; margin:50px 0; flex-wrap:wrap;">
+<!-- ▼▼▼ 追加：縦長広告4つ ▼▼▼ -->
+<div style="display:flex; justify-content:center; gap:20px; margin:50px 0;">
 
 <div>
 <script type="text/javascript">
 atOptions = {
-'key' : '8dc1172332f4fc1216f0ed08d622c93b',
-'format' : 'iframe',
-'height' : 600,
-'width' : 160,
-'params' : {}
+    'key' : '8dc1172332f4fc1216f0ed08d622c93b',
+    'format' : 'iframe',
+    'height' : 600,
+    'width' : 160,
+    'params' : {}
 };
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
@@ -361,11 +361,11 @@ atOptions = {
 <div>
 <script type="text/javascript">
 atOptions = {
-'key' : '8dc1172332f4fc1216f0ed08d622c93b',
-'format' : 'iframe',
-'height' : 600,
-'width' : 160,
-'params' : {}
+    'key' : '8dc1172332f4fc1216f0ed08d622c93b',
+    'format' : 'iframe',
+    'height' : 600,
+    'width' : 160,
+    'params' : {}
 };
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
@@ -374,11 +374,11 @@ atOptions = {
 <div>
 <script type="text/javascript">
 atOptions = {
-'key' : '8dc1172332f4fc1216f0ed08d622c93b',
-'format' : 'iframe',
-'height' : 600,
-'width' : 160,
-'params' : {}
+    'key' : '8dc1172332f4fc1216f0ed08d622c93b',
+    'format' : 'iframe',
+    'height' : 600,
+    'width' : 160,
+    'params' : {}
 };
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
@@ -387,11 +387,11 @@ atOptions = {
 <div>
 <script type="text/javascript">
 atOptions = {
-'key' : '8dc1172332f4fc1216f0ed08d622c93b',
-'format' : 'iframe',
-'height' : 600,
-'width' : 160,
-'params' : {}
+    'key' : '8dc1172332f4fc1216f0ed08d622c93b',
+    'format' : 'iframe',
+    'height' : 600,
+    'width' : 160,
+    'params' : {}
 };
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
