--- a/index.html
+++ b/index.html
@@ -342,74 +342,69 @@ atOptions = {
 
 </div>
 
-<!-- ▼▼▼ 縦長広告4つ ▼▼▼ -->
-<div style="
-    width:100%;
-    display:flex;
-    justify-content:center;
-    gap:25px;
-    margin-top:50px;
-    margin-bottom:50px;
-">
+<!-- ▼▼▼ 縦長広告4つ（ページ最下部に横並び） ▼▼▼ -->
+<section style="margin-top:80px; text-align:center;">
+  <div style="display:flex; justify-content:center; gap:20px; flex-wrap:nowrap;">
 
     <!-- 1 -->
     <div>
-        <script type="text/javascript">
-        atOptions = {
-            'key' : '8dc1172332f4fc1216f0ed08d622c93b',
-            'format' : 'iframe',
-            'height' : 600,
-            'width' : 160,
-            'params' : {}
-        };
-        </script>
-        <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
+      <script type="text/javascript">
+      atOptions = {
+        'key' : '8dc1172332f4fc1216f0ed08d622c93b',
+        'format' : 'iframe',
+        'height' : 600,
+        'width' : 160,
+        'params' : {}
+      };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
     </div>
 
     <!-- 2 -->
     <div>
-        <script type="text/javascript">
-        atOptions = {
-            'key' : '8dc1172332f4fc1216f0ed08d622c93b',
-            'format' : 'iframe',
-            'height' : 600,
-            'width' : 160,
-            'params' : {}
-        };
-        </script>
-        <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
+      <script type="text/javascript">
+      atOptions = {
+        'key' : '8dc1172332f4fc1216f0ed08d622c93b',
+        'format' : 'iframe',
+        'height' : 600,
+        'width' : 160,
+        'params' : {}
+      };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
     </div>
 
     <!-- 3 -->
     <div>
-        <script type="text/javascript">
-        atOptions = {
-            'key' : '8dc1172332f4fc1216f0ed08d622c93b',
-            'format' : 'iframe',
-            'height' : 600,
-            'width' : 160,
-            'params' : {}
-        };
-        </script>
-        <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
+      <script type="text/javascript">
+      atOptions = {
+        'key' : '8dc1172332f4fc1216f0ed08d622c93b',
+        'format' : 'iframe',
+        'height' : 600,
+        'width' : 160,
+        'params' : {}
+      };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
     </div>
 
     <!-- 4 -->
     <div>
-        <script type="text/javascript">
-        atOptions = {
-            'key' : '8dc1172332f4fc1216f0ed08d622c93b',
-            'format' : 'iframe',
-            'height' : 600,
-            'width' : 160,
-            'params' : {}
-        };
-        </script>
-        <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
+      <script type="text/javascript">
+      atOptions = {
+        'key' : '8dc1172332f4fc1216f0ed08d622c93b',
+        'format' : 'iframe',
+        'height' : 600,
+        'width' : 160,
+        'params' : {}
+      };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
     </div>
 
-</div>
-<!-- ▲▲▲ ここまで追加 ▲▲▲ -->
+  </div>
+</section>
+<!-- ▲▲▲ 縦長広告4つ ここまで ▲▲▲ -->
 
 </body>
 </html>
